--- a/index.html
+++ b/index.html
@@ -1,107 +1,65 @@
 <!DOCTYPE html>
-<html lang="en" manifest="cache.appcache">
 <head>
-  <meta charset="utf-8">
-  <title>Make and Play Udacity 2048</title>
-
-  <link href="style/main.css" rel="stylesheet" type="text/css">
-  <link href='http://fonts.googleapis.com/css?family=Source+Code+Pro:400,600,700' rel='stylesheet' type='text/css'>
-  <link rel="shortcut icon" href="favicon.ico">
-  <link rel="apple-touch-icon" href="meta/apple-touch-icon.png">
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="keywords" content="HTML,CSS,Javascript,Make your own 2048,Play 2048">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
-
-  <meta name="HandheldFriendly" content="True">
-  <meta name="MobileOptimized" content="320">
-  <meta name="viewport" content="width=device-width, target-densitydpi=160dpi, initial-scale=1.0, maximum-scale=1, user-scalable=no, minimal-ui">
-  <meta name="format-detection" content="telephone=no" />
-
-  <meta property="og:title" content="2048 game"/>
-  <meta property="og:site_name" content="2048 game"/>
-  <meta property="og:description" content="Play Udacity 2048. Then, make your own 2048 game in Udacity's 2 hour mini course for programming beginners!"/>
-  <meta property="og:image" content="http://gabrielecirulli.github.io/2048/meta/og_image.png"/>
+<title>Beep My Dashboard</title>
+	<script type="text/javascript" src="js/flipcounter.js"></script>
+	<link rel="stylesheet" type="text/css" href="css/counter.css" />
+	
+	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="css/demo.css" />
+	
 </head>
+
 <body>
-  <div class="container">
-    <div class="heading">
-      <h1 class="title">Make 2048</h1>
-      <div class="scores-container">
-        <div class="score-container">0</div>
-        <div class="best-container">0</div>
-      </div>
-    </div>
-
-    <div class="above-game">
-      <p class="game-intro">
-      <a class="restart-button">New Game</a>
-      Use the arrow keys to slide  tiles. Combine similar tiles to create new ones.</p>
-      
-    </div>
+<h1>Beep My Dashboard</h1>
+<img id="logoImage" src="beepMeLogo.png">
 
 
+	<div id="Users">
+		<img id="userPic" src="user.png" height="110" width="110">
+		<div id="wrapper">
+			<div id="flip-counterUsers" class="flip-counter"></div>
+		</div>
+	</div>
+	
+	<div id="RidesDiv">
+		<img id="hitchhikingPic" src="hitchhiking.png" height="110" width="110">	
+		<div id = "rides">
+			<div id="flip-counterRides" class="flip-counter"></div>
+		</div>
+	</div>
+		
+	<script type="text/javascript">
+	//<![CDATA[
 
-    <div class="game-container">
-      <div class="game-message">
-        <p></p>
-        <div class="lower">
-	        <a href="http://www.udacity.com/course/ud248"class="learn learn-low">Take the Class!</a>
-          <a class="retry-button">Play Again</a>
-          <div class="score-sharing"></div>
-        </div>
-      </div>
+	$(function(){
+		// Initialize a new counter
+		var usersCounter = new flipCounter('flip-counterUsers', {value:0, pace:1500, auto:false});
+		var ridesCounter = new flipCounter('flip-counterRides', {value:0, pace:1500, auto:false});
+		
+		//First initialize
+		 $.ajax({
+				type: "GET",
+				url: "http://www.beepmeapp.com/bmaserver/web/vanity",
+				dataType: "jsonp"
+					}).then(function(data) {
+					   usersCounter.setValue(data.message.totalUsers);
+					   ridesCounter.setValue(data.message.totalRides);
+		})
+		
+		//interval every 10 seconds
+		setInterval(function(){
+			 $.ajax({
+				type: "GET",
+				url: "http://www.beepmeapp.com/bmaserver/web/vanity",
+				dataType: "jsonp"
+					}).then(function(data) {
+					   usersCounter.setValue(data.message.totalUsers);
+					   ridesCounter.setValue(data.message.totalRides);
+					   });
+		},10000);
+	});
+	
 
-      <div class="grid-container">
-        <div class="grid-row">
-          <div class="grid-cell"></div>
-          <div class="grid-cell"></div>
-          <div class="grid-cell"></div>
-          <div class="grid-cell"></div>
-        </div>
-        <div class="grid-row">
-          <div class="grid-cell"></div>
-          <div class="grid-cell"></div>
-          <div class="grid-cell"></div>
-          <div class="grid-cell"></div>
-        </div>
-        <div class="grid-row">
-          <div class="grid-cell"></div>
-          <div class="grid-cell"></div>
-          <div class="grid-cell"></div>
-          <div class="grid-cell"></div>
-        </div>
-        <div class="grid-row">
-          <div class="grid-cell"></div>
-          <div class="grid-cell"></div>
-          <div class="grid-cell"></div>
-          <div class="grid-cell"></div>
-        </div>
-      </div>
-
-      <div class="tile-container">
-
-      </div>
-    </div>
-
-
-    <hr>
-    <p class="game-explanation">
-      <strong class="important">How to play:</strong> Use your <strong>arrow keys</strong> to move the tiles. When two tiles with the same value touch, they <strong>merge into one!</strong>
-    </p>
-    <hr>
-  </div>
-
-  <script src="js/bind_polyfill.js"></script>
-  <script src="js/classlist_polyfill.js"></script>
-  <script src="js/animframe_polyfill.js"></script>
-  <script src="js/keyboard_input_manager.js"></script>
-  <script src="js/html_actuator.js"></script>
-  <script src="js/grid.js"></script>
-  <script src="js/tile.js"></script>
-  <script src="js/local_storage_manager.js"></script>
-  <script src="js/game_manager.js"></script>
-  <script src="js/application.js"></script>
-  <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-
+	
+	</script>
 </body>
-</html>
