--- a/user.html
+++ b/user.html
@@ -3,6 +3,8 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="css/user.css" />
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+	<script src="js/user.js"></script>
 </head>
 
 <body>
@@ -12,16 +14,16 @@
 		</div>
 
 		<div id="details">
-			<div><p id="name"><b>Bar Refaeli</b></p></div>
+			<div><p id="name">Bar Refaeli</p></div>
 			<div id="from">
 			<table>
 				<tr>
 					<td id="fromTitle">From</td>
-					<td id="fromLocation"><b>Kfar Saba</b></td>
+					<td id="fromLocation">Kfar Saba</td>
 				</tr>
 				<tr>
 					<td id="desTitle">To</td>
-					<td id="desLocation"><b>Tel Aviv</b></td>
+					<td id="desLocation">Tel Aviv</td>
 				</tr>
 			
 			</table>
@@ -30,7 +32,8 @@
 		<div id="footerPanel">
 			<img id="phone" src="img/icon_phone.png">
 			<img id="mail" src="img/icon_message.png">
-			<img id="message" src="img/icon_with_comment.png">
+			<!-- <img id="message" src="img/icon_with_comment.png"> -->
+			<img id="message" src="img/icon_comment.png">
 		</div>
 		<button id="price">30$</button>
 	</div>
